--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
     </nav>
     <!-- Main Content -->
     <section class="container mx-auto p-8 section" id="home-section">
-
         <div class="flex flex-wrap mt-5 items-center justify-center about" id="my-section">
             <div class="w-full md:w-1/2 lg:w-1/2 p-4 mb-5" id="left-content">
                 <div class="flex flex-col items-start justify-center h-full ftco-animate fadeInUp ftco-animated">
@@ -86,8 +85,8 @@
                             class="cust text-[#237d07]">PIPALIYA </span>
                     </h1>
 
-                    <p class="text-xl mb-4 text-gray-400">
-                        <span class="cust">🎨 Welcome </span>
+                    <p class="text-xl mt-3 text-gray-400">
+                        <span class="cust">Welcome</span>
                         <span class="cust">to </span>
                         <span class="cust">My </span>
                         <span class="cust">Vibrant </span>
@@ -111,15 +110,11 @@
                     </p>
 
 
-                    <div class="flex flex-col sm:flex-row text-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <div class="flex flex-col sm:flex-row text-center space-y-4 sm:space-y-0 sm:space-x-4 mt-5">
                         <span class="cust"><a href="#contact-section"
                                 class="block bg-[#237d07] text-white font-bold py-3 px-8 rounded-full transition duration-300 ease-in-out hover:bg-[#299f04]">
                                 Get in Touch
                             </a></span>
-                        <!-- <a href="#mywork-section"
-                            class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
-                            My Works
-                        </a> -->
                         <span class="cust"><a href="kushal_resume.pdf" download
                                 class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
                                 Download Resume
@@ -135,49 +130,48 @@
     </section>
 
     <hr class="w-4/5 mx-auto fade-in mb-5">
-    <section class="resume flex justify-center mt-5 mb-8 section" id="resume-section">
-        <div class="max-w-2xl w-full mx-auto fade-in">
-            <div class="text-center pb-5 fade-in-right">
-                <b class="res text-5xl font-bold mb-2">Resume</b>
-                <p class="text-gray-400 mt-2">Embark on a journey through a realm of rich experiences, profound
-                    expertise,
-                    and a commitment to
-                    education. Witness the unfolding of achievements and the brilliance of honed skills. Delve into the
-                    narrative that molds my professional profile, revealing a fervor for continuous growth and
-                    innovation.</p>
-            </div>
-            <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
-                <span class="text-3xl font-bold">2021-2024</span>
-                <h2 class="text-lg font-bold text-gray-600 mb-2">Bachelor's Degree of B.Sc(IT)</h2>
-                <span class="wrd text-gray-300">Uka Tarsadia University, Bardoli (UTU)</span>
-                <p class="wrd text-gray-300 mt-4">Babu Madhav Institute of Information Technology's (BMIIT) B.Sc. in IT
-                    program has equipped me with proficiency in programming languages, web development technologies,
-                    database management systems, and networking concepts, along with strong problem-solving and
-                    communication skills.</p>
-                <p class="wrd text-gray-300 mt-4">With an outstanding academic achievement.
-                    successfully completed my degree in B.Sc. in IT from Uka Tarsadia University.</p>
-            </div>
-            <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
-                <span class="text-3xl font-bold">2019-2020</span>
-                <h2 class="wrd text-lg font-bold text-gray-600 mb-2">12th (Higher Secondary Examination)</h2>
-                <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
-                <p class="wrd text-gray-300 mt-4">Successfully cleared 12th board (HSC) exam with an impressive 74% in
-                    the
-                    science stream at Gujarat Secondary and Higher Secondary Board (Jeevan Bharti Educational School),
-                    showcasing my strong academic performance and dedication to the field of science.</p>
-            </div>
-            <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300  fade-in">
-                <span class="text-3xl font-bold">2017-2018</span>
-                <h2 class="text-lg font-bold text-gray-600 mb-2">10th (Secondary School Examination)</h2>
-                <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
-                <p class="wrd text-gray-300 mt-4">Achieved remarkable success in the 10th board (SSC) exam, securing an
-                    impressive 79% overall in studies at Gujarat Secondary and Higher Secondary Board (D D Radadiya
-                    Vidhyalaya Gujarati Medium Schools Schools).</p>
-                <p class="wrd text-gray-300 mt-4">Demonstrates commitment to academic excellence and a strong foundation
-                    in
-                    various subjects.</p>
-            </div>
+    <div class="max-w-2xl w-full mx-auto fade-in">
+        <div class="text-center pb-5 fade-in-right">
+            <b class="res text-5xl font-bold mb-2">Resume</b>
+            <p class="text-gray-400 mt-2">Embark on a journey through a realm of rich experiences, profound
+                expertise,
+                and a commitment to
+                education. Witness the unfolding of achievements and the brilliance of honed skills. Delve into the
+                narrative that molds my professional profile, revealing a fervor for continuous growth and
+                innovation.</p>
         </div>
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
+            <span class="text-3xl font-bold">2021-2024</span>
+            <h2 class="text-lg font-bold text-gray-600 mb-2">Bachelor's Degree of B.Sc(IT)</h2>
+            <span class="wrd text-gray-300">Uka Tarsadia University, Bardoli (UTU)</span>
+            <p class="wrd text-gray-300 mt-4">Babu Madhav Institute of Information Technology's (BMIIT) B.Sc. in IT
+                program has equipped me with proficiency in programming languages, web development technologies,
+                database management systems, and networking concepts, along with strong problem-solving and
+                communication skills.</p>
+            <p class="wrd text-gray-300 mt-4">With an outstanding academic achievement.
+                successfully completed my degree in B.Sc. in IT from Uka Tarsadia University.</p>
+        </div>
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
+            <span class="text-3xl font-bold">2019-2020</span>
+            <h2 class="wrd text-lg font-bold text-gray-600 mb-2">12th (Higher Secondary Examination)</h2>
+            <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
+            <p class="wrd text-gray-300 mt-4">Successfully cleared 12th board (HSC) exam with an impressive 74% in
+                the
+                science stream at Gujarat Secondary and Higher Secondary Board (Jeevan Bharti Educational School),
+                showcasing my strong academic performance and dedication to the field of science.</p>
+        </div>
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300  fade-in">
+            <span class="text-3xl font-bold">2017-2018</span>
+            <h2 class="text-lg font-bold text-gray-600 mb-2">10th (Secondary School Examination)</h2>
+            <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
+            <p class="wrd text-gray-300 mt-4">Achieved remarkable success in the 10th board (SSC) exam, securing an
+                impressive 79% overall in studies at Gujarat Secondary and Higher Secondary Board (D D Radadiya
+                Vidhyalaya Gujarati Medium Schools Schools).</p>
+            <p class="wrd text-gray-300 mt-4">Demonstrates commitment to academic excellence and a strong foundation
+                in
+                various subjects.</p>
+        </div>
+    </div>
     </section>
     <hr class="w-4/5 mx-auto fade-in mb-5">
 
@@ -199,7 +193,6 @@
                         and a genuine curiosity to understand the intricacies of web development.
                         Join me as I embark on this exciting adventure in the realm of coding!
                     </p>
-
                 </div>
                 <div>
                     <div class="terminal border border-green-700 p-2 rounded-md bg-zinc-950 fade-in">
@@ -278,7 +271,7 @@
             <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
         </div>
     </div>
-    
+
     <!-- Project Details -->
     <section class="mywork flex items-center justify-center md:h-screen section text-white fade-in m-3"
         id="mywork-section">
@@ -300,8 +293,10 @@
                         <ul class="glide__slides">
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://www.svgrepo.com/show/261945/web-development.svg" alt="HTML/CSS/JS">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://www.svgrepo.com/show/261945/web-development.svg"
+                                            alt="HTML/CSS/JS"></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">HTML/CSS/JS Project's</div>
                                         <p class="text-gray-700 text-base">
@@ -313,8 +308,9 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://www.svgrepo.com/show/452092/react.svg" alt="React Project">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://www.svgrepo.com/show/452092/react.svg" alt="React Project"></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">React Project's</div>
                                         <p class="text-gray-700 text-base">
@@ -326,8 +322,9 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C# ">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C# "></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">C# Project's</div>
                                         <p class="text-gray-700 text-base">
@@ -339,8 +336,9 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://www.svgrepo.com/show/452088/php.svg" alt="PHP Project">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://www.svgrepo.com/show/452088/php.svg" alt="PHP Project"></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">PHP Project's</div>
                                         <p class="text-gray-700 text-base">
@@ -352,9 +350,10 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg"
-                                        alt=".Net Project">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg"
+                                            alt=".Net Project"></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">.Net Project</div>
                                         <p class="text-gray-700 text-base">
@@ -367,8 +366,10 @@
 
                             <li class="glide__slide">
                                 <div class="max-w-sm mx-auto overflow-hidden">
-                                    <img class="w-full h-32 md:h-32 object-center"
-                                        src="https://www.svgrepo.com/show/452091/python.svg" alt="Python Project">
+                                    <a href="https://www.github.com/Kushal129/"><img
+                                            class="w-full h-32 md:h-32 object-center"
+                                            src="https://www.svgrepo.com/show/452091/python.svg"
+                                            alt="Python Project"></a>
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl text-zinc-600 mb-2">Python Project's</div>
                                         <p class="text-gray-700 text-base">
@@ -383,7 +384,6 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- contect us  -->
@@ -447,9 +447,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="visme_d" data-title="portfolio" data-url="eprmwv11-portfolio" data-domain="forms"
-                data-full-page="false" data-min-height="500px" data-form-id="15538"></div>
-        </div> -->
     </section>
     <div class="fixed bottom-0 right-0 z-10">
         <div>
@@ -497,7 +494,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/glide.min.js"></script>
     <script>
-
         new Glide('.glide', {
             type: 'carousel',
             autoplay: 2000,
@@ -514,9 +510,7 @@
             animationDuration: 600,
             animationTimingFunc: 'ease-in-out',
             animationType: 'slide'
-
         }).mount();
-
     </script>
 </body>
 
