--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
     </section>
-    <hr class="w-4/5 mx-auto fade-in mb-5">
+    <hr class="w-4/5 mx-auto mt-5 fade-in">
 
     <div class="about text-center mt-5 pb-5 fade-in section" id="about-section">
         <b class="abt text-5xl font-bold mb-2">About</b>
@@ -464,7 +464,7 @@
                 <a href="https://www.linkedin.com/in/kushal-pipaliya" target="_blank" class="mx-2 footer-icon">
                     <img src="img/logo/linkd.png" alt="LinkedIn" class="w-6 h-auto logo-green">
                 </a>
-                <a href="https://www.instagram.com/_kushal_pipaliya/" target="_blank" class="mx-2 footer-icon">
+                <a href="https://www.instagram.com/kushal.pipaliya/" target="_blank" class="mx-2 footer-icon">
                     <img src="img/logo/insta.png" alt="Instagram" class="w-6 h-auto logo-green">
                 </a>
                 <a href="https://www.facebook.com/kushal.pipaliya.12?mibextid=JRoKGi" target="_blank"
