--- a/index.html
+++ b/index.html
@@ -3,22 +3,39 @@
 
 <head>
     <!-- SEO Meta Tags -->
+    <!-- Basic Metadata -->
     <meta name="author" content="Kushal Pipaliya">
-    <meta property="og:url" content="https://portfoliobykushal.netlify.app/">
-    <meta property="og:title" content="Kushal Pipaliya | Portfolio">
-    <meta property="og:image" content="img/fmy2.png">
-    <meta property="og:description"
-        content="Kushal Pipaliya: Web Developer passionate about cybersecurity. Aspiring Penetration Tester.">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="en_IN">
     <meta name="description"
         content="Kushal Pipaliya: Web Developer with a passion for cybersecurity. Aspiring Penetration Tester, creating and securing digital landscapes.">
     <meta name="keywords"
         content="Kushal Pipaliya, Portfolio, Web Development, Penetration Testing, Cybersecurity, Frontend Development, Coding, Programming, Problem-solving, Communication Skills, IT Professional, Innovative Coder, Web Security, Network Security, Information Security, Vulnerability Assessment, Secure Coding Practices, Exploit Development, Reverse Engineering, Incident Response">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://portfoliobykushal.netlify.app/">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:url" content="https://portfoliobykushal.netlify.app/">
+    <meta property="og:title" content="Kushal Pipaliya | Portfolio">
+    <meta property="og:image" content="https://portfoliobykushal.netlify.app/img/fmy2.png">
+    <meta property="og:description" content="Kushal Pipaliya: Web Developer Passionate about CyberSecurity.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_IN">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="Kushal">
+    <meta name="twitter:site" content="@PipaliyaKu78237">
+    <meta name="twitter:title" content="Kushal Pipaliya | Portfolio">
+    <meta name="twitter:description"
+        content="Kushal Pipaliya: Web Developer with a passion for cybersecurity. Aspiring Penetration Tester, creating and securing digital landscapes.">
+    <meta name="twitter:image" content="https://portfoliobykushal.netlify.app/img/fmy2.png">
+    <meta name="twitter:image:alt" content="Kushal Pipaliya Portfolio Image">
+
+    <meta property="article:author" content="https://www.instagram.com/_kushal_pipaliya/">
+    <meta property="article:author" content="https://www.linkedin.com/in/kushal-pipaliya">
+
+
+    <!-- Manifest and Verification -->
     <link rel="manifest" href="/manifest.json">
     <meta name="google-site-verification" content="Or1U_3M_2K1vDRKgWW8ii5T-WHMPursFONAhimY-fec">
+    
     <!-- End of SEO Meta Tags -->
 
 
@@ -268,10 +285,10 @@
             </p>
         </div>
 
-        <div class="flex items-center justify-center mt-4">
-            <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
+        <div class="flex items-center mt-2 justify-center">
+            <div class="border-b-2 border-[#237d07] w-16"></div>
             <p class="text-2xl text-[#237d07] mx-4">Stay Inspired</p>
-            <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
+            <div class="border-b-2 border-[#237d07] w-16"></div>
         </div>
     </div>
 
@@ -459,7 +476,7 @@
         </div>
     </div>
     <footer class="relative fade-in" id="footer-section">
-        <div class="mx-auto text-center p-5 text-black z-10 relative">
+        <div class="mx-auto text-center p-5 text-black relative">
             <div class="flex items-center justify-center mb-4">
                 <a href="https://www.github.com/Kushal129" class="mx-2 footer-icon">
                     <img src="img/logo/git.png" alt="GitHub" class="w-6 h-auto logo-green">
@@ -467,7 +484,7 @@
                 <a href="https://www.linkedin.com/in/kushal-pipaliya" target="_blank" class="mx-2 footer-icon">
                     <img src="img/logo/linkd.png" alt="LinkedIn" class="w-6 h-auto logo-green">
                 </a>
-                <a href="https://www.instagram.com/kushal.pipaliya/" target="_blank" class="mx-2 footer-icon">
+                <a href="https://www.instagram.com/_kushal_pipaliya/" target="_blank" class="mx-2 footer-icon">
                     <img src="img/logo/insta.png" alt="Instagram" class="w-6 h-auto logo-green">
                 </a>
                 <a href="https://www.facebook.com/kushal.pipaliya.12?mibextid=JRoKGi" target="_blank"
