new animation CDN add

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 
     <!-- External Scripts and Styles -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+                            
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
@@ -97,7 +99,7 @@
     <section class="container mx-auto p-8 section" id="home-section">
         <div class="flex flex-wrap mt-5 items-center justify-center about" id="my-section">
             <div class="w-full md:w-1/2 lg:w-1/2 p-4 mb-5" id="left-content">
-                <div class="flex flex-col items-start justify-center h-full ftco-animate fadeInUp ftco-animated">
+                <div class="flex flex-col items-start justify-center h-full ">
                     <span class="cust text-[#237d07] text-3xl mt-3">Hey <span class="cust">!</span></span>
 
                     <h1 class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white my-4">
@@ -149,9 +151,9 @@
         </div>
     </section>
 
-    <hr class="w-4/5 mx-auto fade-in mb-5">
-    <div class="max-w-2xl w-full mx-auto fade-in">
-        <div class="text-center pb-5 fade-in-right">
+    <hr class="w-4/5 mx-auto mb-5" data-aos="fade-up" data-aos-duration="4000">
+    <div class="max-w-2xl w-full mx-auto" data-aos="fade-up" data-aos-duration="4000">
+        <div class="text-center pb-5 ">
             <b class="res text-5xl font-bold mb-2">Resume</b>
             <p class="text-gray-400 mt-2">Embark on a journey through a realm of rich experiences, profound
                 expertise,
@@ -160,7 +162,7 @@
                 narrative that molds my professional profile, revealing a fervor for continuous growth and
                 innovation.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-right" data-aos-duration="2000">
             <span class="text-3xl font-bold">2021-2024</span>
             <h2 class="text-lg font-bold text-gray-600 mb-2">Bachelor's Degree of B.Sc(IT)</h2>
             <span class="wrd text-gray-300">Uka Tarsadia University, Bardoli (UTU)</span>
@@ -171,7 +173,7 @@
             <p class="wrd text-gray-300 mt-4">With an outstanding academic achievement.
                 successfully completed my degree in B.Sc. in IT from Uka Tarsadia University.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300 fade-in">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-left" data-aos-duration="3000">
             <span class="text-3xl font-bold">2019-2020</span>
             <h2 class="wrd text-lg font-bold text-gray-600 mb-2">12th (Higher Secondary Examination)</h2>
             <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
@@ -180,7 +182,7 @@
                 science stream at Gujarat Secondary and Higher Secondary Board (Jeevan Bharti Educational School),
                 showcasing my strong academic performance and dedication to the field of science.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300  fade-in">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-right" data-aos-duration="2000">
             <span class="text-3xl font-bold">2017-2018</span>
             <h2 class="text-lg font-bold text-gray-600 mb-2">10th (Secondary School Examination)</h2>
             <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
@@ -193,12 +195,12 @@
         </div>
     </div>
     </section>
-    <hr class="w-4/5 mx-auto mt-5 fade-in">
+    <hr class="w-4/5 mx-auto mt-5" data-aos="fade-up" data-aos-duration="4000">
 
-    <div class="about text-center mt-5 pb-5 fade-in section" id="about-section">
+    <div class="about text-center mt-5 pb-5  section" id="about-section" data-aos="fade-up" data-aos-duration="4000">
         <b class="abt text-5xl font-bold mb-2">About</b>
         <section class="container mx-auto p-8 flex flex-col md:flex-row">
-            <div class="flex-1 mb-8 md:mr-6 fade-in">
+            <div class="flex-1 mb-8 md:mr-6 ">
                 <div class="mb-4">
                     <h2 class="mainwrd text-3xl font-bold mb-2">$ dir /a</h2>
                     <h2 class="mainwrd text-3xl font-bold mb-2 mt-3">Creative Developer</h2>
@@ -215,7 +217,7 @@
                     </p>
                 </div>
                 <div>
-                    <div class="terminal border border-green-700 p-2 rounded-md bg-zinc-950 fade-in">
+                    <div class="terminal border border-green-700 p-2 rounded-md bg-zinc-950" data-aos="flip-right" data-aos-duration="2000">
                         <pre class="p-3 text-left text-white">
 <span class="text-red-700">$</span><span class="text-violet-800">root:\cd\Skills</span>
     <span class="wrd">- HTML5
@@ -233,7 +235,7 @@
             </div>
         </div>
 <!-- Ethical Hacker Section -->
-        <div class="flex-1 fade-in">
+        <div class="flex-1 ">
             <div class="mb-4">
                 <h2 class="mainwrd text-3xl font-bold mb-2">$ ls -a</h2>
                 <h2 class="mainwrd text-3xl font-bold mb-2 mt-3">Cyber World</h2>
@@ -243,7 +245,7 @@
                 </p>
             </div>
             <div>
-                <div class="terminal border-1 p-2 rounded-md bg-zinc-950 fade-in">
+                <div class="terminal border-1 p-2 rounded-md bg-zinc-950" data-aos="flip-left" data-aos-duration="2000">
                     <pre class="p-3 text-left text-white">
 <span class="text-red-700">root@BlueMen:~</span><span class="text-violet-800"># cd /Skills</span>
     <span class="wrd">- Cybersecurity Basics
@@ -270,31 +272,30 @@
     </div>
     </section>
     </div>
-    <div class="fade-in mb-5">
-        <div class="flex items-center justify-center">
-            <div class="border-b-2 border-[#237d07] w-16"></div>
-            <p class="text-2xl text-[#237d07] mx-4">Life Motto</p>
-            <div class="border-b-2 border-[#237d07] w-16"></div>
-        </div>
-
-        <div class="flex flex-col items-center text-neutral-500 justify-center mt-4 text-center">
-            <p class="text-2xl md:text-4xl font-mono">
-                <span class="block md:inline">HACK YOUR LIFE</span>
-                <span class="block md:inline">WORK HARD</span>
-                <span class="block md:inline">CODE SMART</span>
-            </p>
-        </div>
-
-        <div class="flex items-center mt-2 justify-center">
-            <div class="border-b-2 border-[#237d07] w-16"></div>
-            <p class="text-2xl text-[#237d07] mx-4">Stay Inspired</p>
-            <div class="border-b-2 border-[#237d07] w-16"></div>
+    <div  data-aos="zoom-in-up" data-aos-duration="4000">
+        <div class=" mb-5">
+            <div class="flex items-center justify-center">
+                <div class="border-b-2 border-[#237d07] w-16"></div>
+                <p class="text-2xl text-[#237d07] mx-4">Life Motto</p>
+                <div class="border-b-2 border-[#237d07] w-16"></div>
+            </div>
+            <div class="flex flex-col items-center text-neutral-500 justify-center mt-4 text-center">
+                <p class="text-2xl md:text-4xl font-mono">
+                    <span class="block md:inline">HACK YOUR LIFE</span>
+                    <span class="block md:inline">WORK HARD</span>
+                    <span class="block md:inline">CODE SMART</span>
+                </p>
+            </div>
+            <div class="flex items-center mt-2 justify-center">
+                <div class="border-b-2 border-[#237d07] w-16"></div>
+                <p class="text-2xl text-[#237d07] mx-4">Stay Inspired</p>
+                <div class="border-b-2 border-[#237d07] w-16"></div>
+            </div>
         </div>
     </div>
 
     <!-- Project Details -->
-    <section class="mywork flex items-center justify-center md:h-screen section text-white fade-in m-3"
-        id="mywork-section">
+    <section class="mywork flex items-center justify-center md:h-screen section text-white m-3" id="mywork-section" >
         <div class="myworkb max-w-screen-lg w-xl md:w-sm border border-gray-800">
             <div class="text-center p-4">
                 <div class="flex justify-between items-center p-4 rounded-lg ">
@@ -407,10 +408,10 @@
     </section>
 
     <!-- contect us  -->
-    <section class="contact dark-mode ftco-section contact-section mt-5 ftco-no-pb text-[#237d07]" id="contact-section">
+    <section class="contact dark-mode ftco-section contact-section mt-5 ftco-no-pb text-[#237d07]" id="contact-section" >
         <div class="container">
-            <div class="row justify-content-center mb-5 pb-3">
-                <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated mt-3">
+            <div class="row justify-content-center mb-5 pb-3" data-aos="slide-up" data-aos-duration="4000">
+                <div class="col-md-7 heading-section text-center ftco-animate ftco-animated mt-3">
                     <b class="text-5xl">Contact</b>
                     <p class="mt-2">Get in touch for collaboration, support, or any inquiries - let's bring your vision
                         to life!</p>
@@ -475,7 +476,7 @@
             </a>
         </div>
     </div>
-    <footer class="relative fade-in" id="footer-section">
+    <footer class="relative " id="footer-section">
         <div class="mx-auto text-center p-5 text-black relative">
             <div class="flex items-center justify-center mb-4">
                 <a href="https://www.github.com/Kushal129" class="mx-2 footer-icon">
@@ -532,6 +533,11 @@
             animationType: 'slide'
         }).mount();
     </script>
+                                    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+                                    <script>
+                                      AOS.init();
+                                    </script>
+                                
 </body>
 
 </html>
