--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 narrative that molds my professional profile, revealing a fervor for continuous growth and
                 innovation.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-right" data-aos-duration="2000">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-left" data-aos-duration="3000">
             <span class="text-3xl font-bold">2021-2024</span>
             <h2 class="text-lg font-bold text-gray-600 mb-2">Bachelor's Degree of B.Sc(IT)</h2>
             <span class="wrd text-gray-300">Uka Tarsadia University, Bardoli (UTU)</span>
@@ -173,7 +173,7 @@
             <p class="wrd text-gray-300 mt-4">With an outstanding academic achievement.
                 successfully completed my degree in B.Sc. in IT from Uka Tarsadia University.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-left" data-aos-duration="3000">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-right" data-aos-duration="3000">
             <span class="text-3xl font-bold">2019-2020</span>
             <h2 class="wrd text-lg font-bold text-gray-600 mb-2">12th (Higher Secondary Examination)</h2>
             <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
@@ -182,7 +182,7 @@
                 science stream at Gujarat Secondary and Higher Secondary Board (Jeevan Bharti Educational School),
                 showcasing my strong academic performance and dedication to the field of science.</p>
         </div>
-        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-down-right" data-aos-duration="2000">
+        <div class="p-4 m-3 bg-[#09a64314] hover:bg-[#16a34a29] rounded-md transition duration-300" data-aos="fade-left" data-aos-duration="3000">
             <span class="text-3xl font-bold">2017-2018</span>
             <h2 class="text-lg font-bold text-gray-600 mb-2">10th (Secondary School Examination)</h2>
             <span class="wrd text-gray-300">Gujarat Secondary and Higher Secondary Education Board</span>
@@ -295,7 +295,7 @@
     </div>
 
     <!-- Project Details -->
-    <section class="mywork flex items-center justify-center md:h-screen section text-white m-3" id="mywork-section" >
+    <section class="mywork flex items-center justify-center md:h-screen section text-white m-3" id="mywork-section" data-aos="fade-up" data-aos-duration="4000">
         <div class="myworkb max-w-screen-lg w-xl md:w-sm border border-gray-800">
             <div class="text-center p-4">
                 <div class="flex justify-between items-center p-4 rounded-lg ">
@@ -417,7 +417,7 @@
                         to life!</p>
                 </div>
             </div>
-            <div class="container mx-auto  mt-10 p-4">
+            <div class="container mx-auto  mt-10 p-4" data-aos="fade-up" data-aos-duration="4000">
                 <div class="flex flex-wrap -mx-4">
                     <div class="w-full md:w-2/3 px-4 mb-8">
                         <form id="my-form" action="https://formspree.io/f/xnqedqen" method="POST"
@@ -476,7 +476,7 @@
             </a>
         </div>
     </div>
-    <footer class="relative " id="footer-section">
+    <footer class="relative" id="footer-section">
         <div class="mx-auto text-center p-5 text-black relative">
             <div class="flex items-center justify-center mb-4">
                 <a href="https://www.github.com/Kushal129" class="mx-2 footer-icon">
@@ -503,7 +503,7 @@
                 rights reserved.</p>
         </div>
         <div
-            class="absolute inset-x-0 bottom-0 h-20 bg-gradient-to-t from-[#049309] to-transparent opacity-70 animate-pulse rounded-lg">
+            class="absolute inset-x-0 bottom-0 h-20 bg-gradient-to-t from-[#035a067a] to-transparent opacity-70 animate-pulse rounded-lg">
         </div>
     </footer>
 
