--- a/index.html
+++ b/index.html
@@ -18,20 +18,6 @@
     <meta property="og:description" content="Kushal Pipaliya: Web Developer Passionate about CyberSecurity.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_IN">
-
-    <!-- Twitter Card Metadata -->
-    <meta name="twitter:card" content="Kushal">
-    <meta name="twitter:site" content="@PipaliyaKu78237">
-    <meta name="twitter:title" content="Kushal Pipaliya | Portfolio">
-    <meta name="twitter:description"
-        content="Kushal Pipaliya: Web Developer with a passion for cybersecurity. Aspiring Penetration Tester, creating and securing digital landscapes.">
-    <meta name="twitter:image" content="https://portfoliobykushal.netlify.app/img/fmy2.png">
-    <meta name="twitter:image:alt" content="Kushal Pipaliya Portfolio Image">
-
-    <meta property="article:author" content="https://www.instagram.com/_kushal_pipaliya/">
-    <meta property="article:author" content="https://www.linkedin.com/in/kushal-pipaliya">
-
-
     <!-- Manifest and Verification -->
     <link rel="manifest" href="/manifest.json">
     <meta name="google-site-verification" content="Or1U_3M_2K1vDRKgWW8ii5T-WHMPursFONAhimY-fec">
@@ -102,10 +88,10 @@
                 <div class="flex flex-col items-start justify-center h-full ">
                     <span class="cust text-[#237d07] text-3xl mt-3">Hey <span class="cust">!</span></span>
 
-                    <h1 class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white my-4">
+                    <div class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white">
                         <span class="cust"> I'm </span><span class="cust text-[#237d07]">KUSHAL</span> <span
                             class="cust text-[#237d07]">PIPALIYA </span>
-                    </h1>
+                    </div>
 
                     <p class="text-xl mt-3 text-gray-400">
                         <span class="cust">Welcome</span>
