--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white">
                         <span class="cust"> I'm </span><span class="cust text-[#237d07]">KUSHAL</span> <span
-                            class="cust text-[#237d07]">PIPALIYA </span>
+                            class="  text-[#237d07]">PIPALIYA </span>
                     </div>
 
                     <p class="text-xl mt-3 text-gray-400">
@@ -512,7 +512,7 @@
                     class="mx-2 footer-icon">
                     <img src="img/logo/fb.png" alt="Facebook" class="w-6 h-auto logo-green">
                 </a>
-                <a href="https://twitter.com/PipaliyaKu78237" target="_blank" class="mx-2 footer-icon">
+                <a href="https://twitter.com/KushalPipaliya5" target="_blank" class="mx-2 footer-icon">
                     <img src="img/logo/twt.png" alt="Twitter" class="w-6 h-auto logo-green">
                 </a>
                 <a href="mailto:kushalhpipaliya01@email.com" class="mx-2 footer-icon">
