--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white">
                         <span class="cust"> I'm </span><span class="cust text-[#237d07]">KUSHAL</span> <span
-                            class="  text-[#237d07]">PIPALIYA </span>
+                            class="cust text-[#237d07]">PIPALIYA </span>
                     </div>
 
                     <p class="text-xl mt-3 text-gray-400">
