--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <span class="cust text-[#237d07] text-3xl mt-3">Hey <span class="cust">!</span></span>
 
                     <div class="text-4xl im md:text-5xl lg:text-6xl font-bold text-white">
-                        <span class="cust"> I'm </span><span class="cust text-[#237d07]">KUSHAL</span> <span
+                        <span class="cust"> I'm </span><span class="cust text-[#237d07]">KUSHAL</span><span
                             class="cust text-[#237d07]">PIPALIYA </span>
                     </div>
 
@@ -274,15 +274,15 @@
     - Scripting (Python, Bash)
     - Web Application Security
     - Network Scanning and Enumeration 
-    - Vulnerability Assessment
+    <!-- - Vulnerability Assessment
     - Exploitation Techniques
-    - Post-Exploitation Strategies
+    - Post-Exploitation Strategies -->
     - Wireless Security
     - Social Engineering
     - <span class="text-slate-400">Forensics and Log Analysis</span>
     - <span class="text-slate-400">Threat Intelligence</span>
-    - <span class="text-slate-400">Security Frameworks (OWASP, NIST)</span>
-    - <span class="text-slate-400">Security Standards and Compliance</span>
+    <!-- - <span class="text-slate-400">Security Frameworks (OWASP, NIST)</span>
+    - <span class="text-slate-400">Security Standards and Compliance</span> -->
     - and many more</span><span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span>
                 </pre>
                     </div>
